package com.crypto.app.repository;

import com.crypto.app.domain.Transaction;

public interface TransactionRepository extends Repository<Transaction> {
}







