package com.crypto.app.repository;

import com.crypto.app.domain.Wallet;

public interface WalletRepository extends Repository<Wallet> {
}







